php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21074 PHP doesn't work with 401 (Auth) ErrorDocument and Apache2
Submitted: 2002-12-18 04:51 UTC Modified: 2003-07-10 23:25 UTC
Votes:11
Avg. Score:4.5 ± 0.5
Reproduced:11 of 11 (100.0%)
Same Version:5 (45.5%)
Same OS:3 (27.3%)
From: dreamlab at epost dot de Assigned:
Status: Closed Package: Apache2 related
PHP Version: 4.3.2-dev OS: Windows XP
Private report: No CVE-ID: None
 [2002-12-18 04:51 UTC] dreamlab at epost dot de
Whenever I use a .php-file as a 401 ErrorDocument, Apache2 fails and shows the file specified as ErrorDocument.

My .htaccess contains
ErrorDocument 401 /error.php

This absolutely works with Apache 1.3.27, but not with ANY Apache 2.0.x. This also still occurs with PHP 4.3RC3.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-07-10 23:25 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC