- Fixed bug #21074 (Apache2: "ErrorDocument xxx /error.php" broken). (Jani)